--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -169,7 +169,8 @@
     colback=gray!10!white,
     colframe=gray!20!white,
     borderline west={0.25em}{0pt}{gray},
-}{rem}
+    label type=remark,
+}{rk}
 
 
 % *-------------------*
